--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,10 @@ AUTH_JWT_SUBJECT=
 AUTH_JWT_ISSUER=
 AUTH_JWT_AUDIENCE=
 
+JOB_ENABLE=
+
+DATABASE_DEBUG=
+
 AUTH_JWT_ACCESS_TOKEN_SECRET_KEY=
 AUTH_JWT_ACCESS_TOKEN_EXPIRED=
 
