--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
             - ./init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
         env_file:
             - .env
+
     pgadmin:
         container_name: pgadmin
         image: dpage/pgadmin4
@@ -27,8 +28,22 @@ services:
         links:
             - postgres
 
+    redis:
+        image: redis
+        container_name: redis
+        restart: always
+        command: redis-server --requirepass your_redis_password
+        ports:
+            - '6379:6379'
+        volumes:
+            - redis:/data/redis
+        env_file:
+            - .env
+
 volumes:
     postgres:
         driver: local
     pgadmin:
+        driver: local
+    redis:
         driver: local
