--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "typeorm": "typeorm-ts-node-esm",
     "upgrade:package": "ncu -u",
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf dist && mkdirp dist/src/common/integrations/mail/templates",
+    "postbuild": "copyfiles -u 1 src/common/integrations/mail/templates/** dist/src",
     "build": "nest build",
     "format": "yarn format:src && yarn format:test",
     "format:src": "prettier --write src/**/*.ts",
@@ -60,6 +61,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "copyfiles": "^2.4.1",
     "crypto-js": "^4.1.1",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
@@ -68,6 +70,7 @@
     "nest-winston": "^1.9.2",
     "nestjs-command": "^3.1.3",
     "nestjs-i18n": "^10.2.6",
+    "nodemailer-sendinblue-transport": "^2.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-headerapikey": "^1.2.2",
