done set up minio storage module

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,18 @@ services:
             - redis:/data/redis
         env_file:
             - .env
+    minio:
+        image: minio/minio
+        container_name: minio
+        ports:
+            - '9000:9000'
+            - '9001:9001'
+        volumes:
+            - ./storage:/data
+        environment:
+            MINIO_ROOT_USER: minio_admin
+            MINIO_ROOT_PASSWORD: minio_admin
+        command: server --console-address ":9001" /data
 
 volumes:
     postgres:
