--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@nestjs/terminus": "^9.2.2",
     "@nestjs/throttler": "^4.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/minio": "^7.1.1",
     "@types/response-time": "^2.3.5",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
@@ -66,6 +67,7 @@
     "crypto-js": "^4.1.1",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
+    "minio": "^7.1.1",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "nest-winston": "^1.9.2",
