refactor .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APP_NAME=
 APP_ENV=
 APP_LANGUAGE=
+APP_PROTOCOL=
 
 HTTP_ENABLE=
 HTTP_HOST=
@@ -28,6 +29,7 @@ AUTH_JWT_ACCESS_TOKEN_SECRET_KEY=
 AUTH_JWT_ACCESS_TOKEN_EXPIRED=
 
 AUTH_JWT_REFRESH_TOKEN_SECRET_KEY=
+
 AUTH_JWT_REFRESH_TOKEN_EXPIRED=
 AUTH_JWT_REFRESH_TOKEN_NOT_BEFORE_EXPIRATION=
 
@@ -49,3 +51,16 @@ DEBUGGER_HTTP_WRITE_INTO_FILE=
 DEBUGGER_HTTP_WRITE_INTO_CONSOLE=
 DEBUGGER_SYSTEM_WRITE_INTO_FILE=
 DEBUGGER_SYSTEM_WRITE_INTO_CONSOLE=
+
+# 
+MAIL_PROVIDER_TYPE=
+# 
+REDIS_HOST=
+REDIS_PORT=
+
+#
+SIB_API_KEY=
+
+# 
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
