--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "class-validator": "^0.14.0",
     "copyfiles": "^2.4.1",
     "crypto-js": "^4.1.1",
+    "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "minio": "^7.1.1",
