--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "rotating-file-stream": "^3.1.0",
     "rxjs": "^7.8.1",
     "swagger-themes": "^1.2.28",
+    "twilio": "^4.14.1",
     "typeorm": "^0.3.17",
     "typeorm-transactional": "^0.4.1",
     "ua-parser-js": "^1.0.35",
