--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,72 @@ services:
             MINIO_ROOT_PASSWORD: minio_admin
         command: server --console-address ":9001" /data
 
+    es01:
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.9.1
+        container_name: es01
+        environment:
+            - node.name=es01
+            - cluster.name=es-docker-cluster
+            - discovery.seed_hosts=es02,es03
+            - cluster.initial_master_nodes=es01,es02,es03,es04
+            - bootstrap.memory_lock=true
+            - 'ES_JAVA_OPTS=-Xms512m -Xmx512m'
+        ulimits:
+            memlock:
+                soft: -1
+                hard: -1
+        volumes:
+            - elasticsearch_data01:/usr/share/elasticsearch/data
+        ports:
+            - 9200:9200
+        networks:
+            - elastic
+    es02:
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.9.1
+        container_name: es02
+        environment:
+            - node.name=es02
+            - cluster.name=es-docker-cluster
+            - discovery.seed_hosts=es01,es03
+            - cluster.initial_master_nodes=es01,es02,es03,es04
+            - bootstrap.memory_lock=true
+            - 'ES_JAVA_OPTS=-Xms512m -Xmx512m'
+        ulimits:
+            memlock:
+                soft: -1
+                hard: -1
+        volumes:
+            - elasticsearch_data02:/usr/share/elasticsearch/data
+        networks:
+            - elastic
+    es03:
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.9.1
+        container_name: es03
+        environment:
+            - node.name=es03
+            - cluster.name=es-docker-cluster
+            - discovery.seed_hosts=es01,es02
+            - cluster.initial_master_nodes=es01,es02,es03,es04
+            - bootstrap.memory_lock=true
+            - 'ES_JAVA_OPTS=-Xms512m -Xmx512m'
+        ulimits:
+            memlock:
+                soft: -1
+                hard: -1
+        volumes:
+            - elasticsearch_data03:/usr/share/elasticsearch/data
+        networks:
+            - elastic
+
+    kibana:
+        image: docker.elastic.co/kibana/kibana:7.9.1
+        container_name: kibana
+        environment:
+            ELASTICSEARCH_HOSTS: 'http://es01:9200'
+        ports:
+            - '5601:5601'
+        networks:
+            - elastic
 volumes:
     postgres:
         driver: local
@@ -58,3 +124,13 @@ volumes:
         driver: local
     redis:
         driver: local
+    elasticsearch_data01:
+        driver: local
+    elasticsearch_data02:
+        driver: local
+    elasticsearch_data03:
+        driver: local
+
+networks:
+    elastic:
+        driver: bridge
