--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
         ports:
             - 9200:9200
         networks:
-            - elastic
+            - elk-network
     es02:
         image: docker.elastic.co/elasticsearch/elasticsearch:7.9.1
         container_name: es02
@@ -88,7 +88,7 @@ services:
         volumes:
             - elasticsearch_data02:/usr/share/elasticsearch/data
         networks:
-            - elastic
+            - elk-network
     es03:
         image: docker.elastic.co/elasticsearch/elasticsearch:7.9.1
         container_name: es03
@@ -106,7 +106,7 @@ services:
         volumes:
             - elasticsearch_data03:/usr/share/elasticsearch/data
         networks:
-            - elastic
+            - elk-network
 
     kibana:
         image: docker.elastic.co/kibana/kibana:7.9.1
@@ -116,7 +116,26 @@ services:
         ports:
             - '5601:5601'
         networks:
-            - elastic
+            - elk-network
+
+    logstash:
+        image: docker.elastic.co/logstash/logstash:7.10.0
+        container_name: logstash
+        volumes:
+            - ./logstash-config:/usr/share/logstash/pipeline
+        environment:
+            - ELASTICSEARCH_HOST=es01
+            # Set the Java options with increased thread stack size
+            - 'ES_JAVA_OPTS=-Xms512m -Xmx512m -Xss1m'
+        depends_on:
+            - es01
+            - es02
+            - es03
+        ports:
+            - 5044:5044
+        networks:
+            - elk-network
+
 volumes:
     postgres:
         driver: local
@@ -132,5 +151,5 @@ volumes:
         driver: local
 
 networks:
-    elastic:
+    elk-network:
         driver: bridge
