--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "copyfiles": "^2.4.1",
+    "cron": "^2.4.0",
     "crypto-js": "^4.1.1",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
@@ -99,6 +100,7 @@
     "ua-parser-js": "^1.0.35",
     "winston": "^3.9.0",
     "winston-daily-rotate-file": "^4.7.1",
+    "winston-logstash-transport": "^2.0.0",
     "xlsx": "^0.18.5",
     "yargs": "^17.7.2",
     "yarn": "^1.22.19"
