refactor some structure

--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "spell": "yarn spell:src && yarn spell:test",
     "spell:src": "cspell lint --config cspell.json src/**/*.ts --color --gitignore --no-must-find-files --no-summary --no-progress || true",
     "spell:test": "cspell lint --config cspell.json test/**/*.ts --color --gitignore --no-must-find-files --no-summary --no-progress || true",
-    "seed:post": "nestjs-command seed:post",
-    "rollback:post": "nestjs-command remove:post",
-    "seed": "yarn seed:post",
-    "rollback": "yarn rollback:post",
+    "seed:category": "nestjs-command seed:category",
+    "rollback:category": "nestjs-command remove:category",
+    "seed": "yarn seed:category",
+    "rollback": "yarn rollback:category",
     "migration:generate": "yarn run typeorm migration:generate -d ormconfig",
     "migration:create": "yarn run typeorm migration:create -d ormconfig",
     "migration:run": "yarn run typeorm migration:run -d ormconfig"
