--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "spell:test": "cspell lint --config cspell.json test/**/*.ts --color --gitignore --no-must-find-files --no-summary --no-progress || true",
     "seed:category": "nestjs-command seed:category",
     "rollback:category": "nestjs-command remove:category",
-    "seed": "yarn seed:category",
+    "seed:product": "nestjs-command seed:product",
+    "rollback:product": "nestjs-command remove:product",
+    "seed": "yarn seed:category && yarn seed:product",
     "rollback": "yarn rollback:category",
     "migration:generate": "yarn run typeorm migration:generate -d ormconfig",
     "migration:create": "yarn run typeorm migration:create -d ormconfig",
@@ -56,6 +58,7 @@
     "@nestjs/cqrs": "^10.0.3",
     "@nestjs/elasticsearch": "^10.0.1",
     "@nestjs/jwt": "^10.0.3",
+    "@nestjs/microservices": "^10.1.3",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/schedule": "^2.2.3",
@@ -65,8 +68,11 @@
     "@nestjs/typeorm": "^10.0.0",
     "@types/minio": "^7.1.1",
     "@types/response-time": "^2.3.5",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.3",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.10.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "copyfiles": "^2.4.1",
