--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "rollback:category": "nestjs-command remove:category",
     "seed:product": "nestjs-command seed:product",
     "rollback:product": "nestjs-command remove:product",
-    "seed": "yarn seed:category && yarn seed:product",
+    "seed:user": "nestjs-command seed:user",
+    "rollback:user": "nestjs-command remove:user",
+    "seed": "yarn seed:category && yarn seed:product && yarn seed:user",
     "rollback": "yarn rollback:category",
     "migration:generate": "yarn run typeorm migration:generate -d ormconfig",
     "migration:create": "yarn run typeorm migration:create -d ormconfig",
@@ -61,11 +63,13 @@
     "@nestjs/microservices": "^10.1.3",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.4.3",
+    "@nestjs/platform-socket.io": "^10.1.3",
     "@nestjs/schedule": "^2.2.3",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/terminus": "^9.2.2",
     "@nestjs/throttler": "^4.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^10.1.3",
     "@types/minio": "^7.1.1",
     "@types/response-time": "^2.3.5",
     "amqp-connection-manager": "^4.1.14",
@@ -99,6 +103,7 @@
     "rimraf": "^5.0.1",
     "rotating-file-stream": "^3.1.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.2",
     "swagger-themes": "^1.2.28",
     "twilio": "^4.14.1",
     "typeorm": "^0.3.17",
