--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "rollback:product": "nestjs-command remove:product",
     "seed:user": "nestjs-command seed:user",
     "rollback:user": "nestjs-command remove:user",
-    "seed": "yarn seed:category && yarn seed:product && yarn seed:user",
+    "seed:conversation": "nestjs-command seed:conversation",
+    "rollback:conversation": "nestjs-command remove:conversation",
+    "seed": "yarn seed:category && yarn seed:product && yarn seed:user && yarn seed:conversation",
     "rollback": "yarn rollback:category",
     "migration:generate": "yarn run typeorm migration:generate -d ormconfig",
     "migration:create": "yarn run typeorm migration:create -d ormconfig",
