--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@nestjs/microservices": "^10.1.3",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.4.3",
-    "@nestjs/platform-socket.io": "^10.1.3",
+    "@nestjs/platform-socket.io": "^6.11.5",
     "@nestjs/schedule": "^2.2.3",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/terminus": "^9.2.2",
@@ -75,6 +75,7 @@
     "@nestjs/websockets": "^10.1.3",
     "@types/minio": "^7.1.1",
     "@types/response-time": "^2.3.5",
+    "@types/socket.io": "^2.1.4",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.3",
     "axios": "^1.4.0",
