add more redis commander service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,17 @@ services:
             - redis:/data/redis
         env_file:
             - .env
+
+    redis-commander:
+        image: rediscommander/redis-commander:latest
+        container_name: redis-commander
+        restart: always
+        ports:
+            - '8081:8081'
+        environment:
+            - REDIS_HOSTS=local:redis:6379
+        depends_on:
+            - redis
     minio:
         image: minio/minio
         container_name: minio
