--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,15 +119,15 @@ services:
         networks:
             - elk-network
 
-    # kibana:
-    #     image: docker.elastic.co/kibana/kibana:7.9.1
-    #     container_name: kibana
-    #     environment:
-    #         ELASTICSEARCH_HOSTS: 'http://es01:9200'
-    #     ports:
-    #         - '5601:5601'
-    #     networks:
-    #         - elk-network
+    kibana:
+        image: docker.elastic.co/kibana/kibana:7.9.1
+        container_name: kibana
+        environment:
+            ELASTICSEARCH_HOSTS: 'http://es01:9200'
+        ports:
+            - '5601:5601'
+        networks:
+            - elk-network
 
     rabbitmq:
         image: rabbitmq:management
